--- a/ZFinder/Event/scripts/cross_check_plots/makefile
+++ b/ZFinder/Event/scripts/cross_check_plots/makefile
@@ -3,7 +3,7 @@ ROOT_INCLUDES=`root-config --cflags`
 ROOT_ALL=`root-config --cflags --libs`
 
 #Compiler
-CC=g++ -O2 -g
+CC=g++ -O2 -g -std=c++0x -Wall
 CCC=${CC} -c
 
 all: make_plots.exe
