Update MADGRAPH Signal MC Cross-section
MADGRAPH only generates Zs with a mass greater than 50 GeV, and so the
cross-section is not the same as the POWHEG signal MC or Ditau (M > 20
GeV) that was used before.

--- a/ZFinder/Event/multicrab_mc.cfg
+++ b/ZFinder/Event/multicrab_mc.cfg
@@ -47,5 +47,6 @@ CMSSW.datasetpath = /WJetsToLNu_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-
 CMSSW.output_file = bg_wjets.root
 
 [MadGraph]
+# 1177.3 pb (Lower than Ditau because Ditau is M20, and MadGraph is M50)
 CMSSW.datasetpath = /DYJetsToLL_M-50_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
 CMSSW.output_file = madgraph.root
