Add two Higgs->WW->ll MCs to multicrab

--- a/ZFinder/Event/multicrab_mc.cfg
+++ b/ZFinder/Event/multicrab_mc.cfg
@@ -46,6 +46,14 @@ CMSSW.datasetpath = /WJetsToLNu_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-
 #CMSSW.datasetpath = /WJetsToLNu_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v2/AODSIM
 CMSSW.output_file = bg_wjets.root
 
+[BG_gg_h_ww]
+CMSSW.datasetpath = /GluGluToHToWWTo2LAndTau2Nu_M-125_8TeV-powheg-pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+CMSSW.output_file = bg_gg_h_ww.root
+
+[BG_vbf_h_ww]
+CMSSW.datasetpath = /VBF_HToWWTo2LAndTau2Nu_M-125_8TeV-powheg-pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+CMSSW.output_file = bg_vbf_h_ww.root
+
 [MadGraph]
 # 1177.3 pb (Lower than Ditau because Ditau is M20, and MadGraph is M50)
 CMSSW.datasetpath = /DYJetsToLL_M-50_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
