--- a/ZFinder/Event/multicrab_mc.cfg
+++ b/ZFinder/Event/multicrab_mc.cfg
@@ -9,10 +9,9 @@ cfg=crab_mc.cfg
 CMSSW.datasetpath = /DYToTauTau_M-20_CT10_TuneZ2star_v2_8TeV-powheg-tauola-pythia6/Summer12_DR53X-PU_S10_START53_V7A-v2/AODSIM
 CMSSW.output_file = bg_ditau.root
 
-[TTBar]
+[BG_TTBar]
 # 23.64 pb from TTBar Inclusive is 245.8 Pb, T->Wq is 0.9621, W->lnu is 0.3257
 CMSSW.datasetpath = /TTJets_FullLeptMGDecays_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
-#CMSSW.datasetpath = /TTJets_FullLeptMGDecays_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A-v2/AODSIM
 CMSSW.output_file = bg_ttbar.root
 
 [BG_ww]
@@ -43,7 +42,6 @@ CMSSW.output_file = bg_singletbar.root
 [BG_w_jets]
 # 37509 pb
 CMSSW.datasetpath = /WJetsToLNu_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
-#CMSSW.datasetpath = /WJetsToLNu_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v2/AODSIM
 CMSSW.output_file = bg_wjets.root
 
 [BG_gg_h_ww]
