Update cross-check plotter
Various changes:
* Remove Log Y on Z plots
* Change binning of the vertices plot
* Change to new MC/Data
* Use the weighted counter in the histograms
* Change to PDF from png
* Add a .C plots for SVN
* Add "plots" as a makefile target
* _REMOVE_ first bin in phi*, it doesn't show up correctly in MC; this
  needs to be fixed

--- a/ZFinder/Event/scripts/cross_check_plots/makefile
+++ b/ZFinder/Event/scripts/cross_check_plots/makefile
@@ -6,7 +6,10 @@ ROOT_ALL=`root-config --cflags --libs`
 CC=g++ -O2 -g -std=c++0x -Wall
 CCC=${CC} -c
 
-all: make_plots.exe
+all: plots
+
+plots: make_plots.exe
+	./make_plots.exe
 
 make_plots.exe: make_plots.cpp cross_check_plotter.o
 	${CC} ${ROOT_ALL} -o make_plots.exe \
