Update Same Sign QCD Code
Simply subtracting the backgrounds and taking the remaining events in
the sideband as the background doesn't work as the MC over predicts the
background. Instead, we fit the Z peak using the MC.

--- a/ZFinder/Event/scripts/same_sign/makefile
+++ b/ZFinder/Event/scripts/same_sign/makefile
@@ -8,9 +8,13 @@ CCC=${CC} -c
 
 all: same_sign.exe
 
-same_sign.exe: same_sign.cpp
+same_sign.exe: same_sign.cpp same_sign.h FitFunction.o
 	${CC} ${ROOT_ALL} -o same_sign.exe \
-	same_sign.cpp
+	same_sign.cpp \
+	FitFunction.o
+
+%.o:%.cpp %.h
+	${CCC} ${ROOT_INCLUDES} $< -o $@
 
 clean:
 	rm -f same_sign.exe *.o
