Update MC multicrab config

--- a/ZFinder/Event/crab_mc.cfg
+++ b/ZFinder/Event/crab_mc.cfg
@@ -2,6 +2,7 @@
 total_number_of_lumis  =  -1
 number_of_jobs         =  500
 pset                   = zfinder_combined_mc_cfg.py
+output_file            = test_combined_mc.root
 #datasetpath and output_file set in multicrab
 
 [USER]
